# flagman

./: .bumpversion.cfg  .flake8  .gitignore  .travis.yml  LICENSE.rst  MANIFEST.in  README.rst  doc8.ini  mypy.ini  readthedocs.yml  setup.cfg  setup.py  tox.ini  vulture_whitelist.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: action-anatomy.rst  api.rst  cli.rst  conf.py  index.rst  overlapping-signals.rst  real-world.rst
src/flagman/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  sd_notify.py  types.py
src/flagman/actions/: __init__.py  action.py  print.py
tests/: dodgy-wrapper.sh  pyroma-wrapper.sh
