##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = flagman
version = 0.1.0-dev
url = https://github.com/scolby33/flagman
download_url = https://github.com/scolby33/flagman/releases
author = Scott Colby
author_email = scolby33@gmail.com
maintainer = scolby33@gmail.com
maintainer_email = scolby33@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
license = MIT
description = Perform arbitrary actions on signals.
long_description = file: README.rst
keywords =

#[metadata.project_urls]
#Documentation =

[options]
install_requires =
    colorama
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    flagman = flagman.cli:main
flagman.action =
    print = flagman.actions:print_action
    print2 = flagman.actions:print_action2

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
# I use f-strings. Upgrade yo' Python!
# TODO change this appropriately for 3.7
python-tag = py36

