##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = flagman
version = 0.1.0-dev
url = https://github.com/scolby33/flagman
download_url = https://github.com/scolby33/flagman/releases
author = Scott Colby
author_email = scolby33@gmail.com
maintainer = scolby33@gmail.com
maintainer_email = scolby33@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: Utilities
license = MIT
# for wheels https://wheel.readthedocs.io/en/stable/index.html#including-the-license-in-the-generated-wheel-file
license_file = LICENSE.rst
description = Perform arbitrary actions on signals.
long_description = file: README.rst
keywords =
    signals
    systemd

[metadata.project_urls]
Bug Tracker = https://github.com/scolby33/flagman/issues
Documentation = https://flagman.readthedocs.io/en/latest/
Source Code = https://github.com/scolby33/flagman

[options]
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
    = src
zip_safe = true

[options.extras_require]
color = colorama

[options.entry_points]
console_scripts =
    flagman = flagman.cli:main_wrapper
flagman.action =
    print = flagman.actions:PrintAction
    delay_print = flagman.actions:DelayedPrintAction
    print_once = flagman.actions:PrintOnceAction

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py37
